[ ALERT_CONFIG ]
link1 = Chuck's Kofi = https://steamcommunity.com/linkfilter/?u=https://ko-fi.com/chuckleberryfinn,
link2 = Workshop = https://steamcommunity.com/id/Chuckleberry_Finn/myworkshopfiles/?appid=108600,
link3 = Github = https://steamcommunity.com/linkfilter/?u=https://github.com/Chuckleberry-Finn,
[ ------ ]

[ 7/18/25 ]
Welcome to the Last Stand!
[ ------ ]

[ 7/18/25 - hotfix ]
- Fix UI issue when Last-Stand Disabled.
- Pings to zombies come from players not the house.
[ ------ ]

[ 7/20/25]
- Fixed sandbox-panel covering options menu.
- Fixed wave announcer broadcasting to other players.
- Refactored some internal code stuffs. (Shops is empty check)
[ ------ ]